Setup CodeFirst, along with SQL Server CE data modelling, plus test controller.

--- a/mvcOne/Web.config
+++ b/mvcOne/Web.config
@@ -10,7 +10,12 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
-    
+
+  <connectionStrings>
+    <add name="dbPeople" connectionString="Data Source=|DataDirectory|dbPeople.sdf"
+         providerName="System.Data.SqlServerCe.4.0" />
+  </connectionStrings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
