Modified web.config to allow error display

--- a/mvcOne/Web.config
+++ b/mvcOne/Web.config
@@ -27,7 +27,9 @@
       </assemblies>
     </compilation>
 
-    <authentication mode="Forms">
+    <customErrors mode="Off"></customErrors>
+      
+      <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
 
